--- a/.classpath
+++ b/.classpath
@@ -1,11 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk">
-		<attributes>
-			<attribute name="owner.project.facets" value="java"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.5">
 		<attributes>
 			<attribute name="owner.project.facets" value="jst.web"/>
@@ -13,8 +8,9 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="C:/Users/WhyRootOne/Desktop/bibs/javax.ejb.jar"/>
-	<classpathentry kind="lib" path="C:/Users/WhyRootOne/Desktop/bibs/javax.persistence.jar"/>
-	<classpathentry kind="lib" path="C:/Users/WhyRootOne/Desktop/bibs/javax.servlet-3.0.jar"/>
+	<classpathentry kind="lib" path="/home/nicolas/Téléchargements/javax.servlet-3.0.jar"/>
+	<classpathentry kind="lib" path="/home/nicolas/Téléchargements/javax.persistence.jar"/>
+	<classpathentry kind="lib" path="/home/nicolas/Téléchargements/javax.ejb.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
