--- a/.classpath
+++ b/.classpath
@@ -12,5 +12,6 @@
 	<classpathentry kind="lib" path="/home/nicolas/Téléchargements/javax.persistence.jar"/>
 	<classpathentry kind="lib" path="/home/nicolas/Téléchargements/javax.ejb.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="/home/nicolas/Téléchargements/hibernate-annotations-3.5.6-Final.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
